--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="col-12   col-lg-4 grid-item prewed">
                     <img src="assets/images/pre3.jpg" alt="">
                 </div>
-                <div class="text-center more col-md-12  grid-item prewed"><a href="#!">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
+                <div class="text-center more col-md-12  grid-item prewed"><a href="/pre-wedding">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
                     </a></div>
                 <div class="col-12 col-md-6  grid-item engage ">
                     <img src="assets/images/eng01.jpg" alt="">
