--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 </div>
             </div>
             <p class="text-center"> © - 2020 Vicky Studio Photography <br> All Right Reserved.</p>
-            <p class="text-center">Made with <img src="assets/images/loveblackfill.svg" class="img-fluid footerlove"> by <img src="assets/images/Slogo.png" class="img-fluid devlogo" ></p>
+            <p class="text-center">Made with <img src="assets/images/loveblackfill.svg" class="img-fluid footerlove"> by <img src="assets/images/Slogo1.png" class="img-fluid devlogo" ></p>
     </footer>
     <!--     <script src="http://bfintal.github.io/Counter-Up/jquery.counterup.min.js"></script> 
  -->
