contact update using studio

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
  -->
             <div class="row pt-5">
                 <div class="col-md-6">
-                    <h3 class="mb-5">Feel free to get in frame with us. We are always open to exchange views on new projects, creative ideas and feel lucky to be part of your visions.</h3>
+                    <h3 class="mb-5">Feel freeee to get in frame with us. We are always open to exchange views on new projects, creative ideas and feel lucky to be part of your visions.</h3>
 
 
                     <h6 class="mt-5 pt-5">Need capturing assistance?</h6>
