--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="abt-bk">
                 <div class="abt-block">
                     <h2 class="text-left pb-3 pt-4">We <span>Focus</span> differently</h2>
-                    <p class="pt-2">Let Our Studio help you create images worth sharing!
+                    <p class="pt-2">Let Vicky Studio help you create images worth sharing!
                         Whether it’s in our studios, in your home or at a special event, our skilled photographers will create just the right ambience to bring out your best side. Your only dilemma will be... which photo to share first!</p>
                 </div>
             </div>
