--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
                 <div class="col-12   col-lg-4 grid-item prewed">
                     <img src="assets/images/pre3.jpg" alt="">
                 </div>
-                <div class="text-center more col-md-12  grid-item prewed"><a href="/pre-wedding">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
+                <div class="text-center more col-md-12  grid-item prewed">
+                    <a href="/pre-wedding">More
                     </a></div>
                 <div class="col-12 col-md-6  grid-item engage ">
                     <img src="assets/images/eng01.jpg" alt="">
@@ -328,7 +329,7 @@
                 <div class="col-12 col-md-6  grid-item engage">
                     <img src="assets/images/eng02.jpg" alt="">
                 </div>
-                <div class="text-center more col-md-12  grid-item engage"><a href="#!">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
+                <div class="text-center more col-md-12  grid-item engage"><a href="#!">More
                     </a></div>
                 <div class="col-12  col-md-4 grid-item wedd">
                     <img src="assets/images/wed01.jpg" alt="">
@@ -339,7 +340,7 @@
                 <div class="col-12  col-md-4 grid-item wedd">
                     <img src="assets/images/wed03.jpg" alt="">
                 </div>
-                <div class="text-center more col-md-12  grid-item wedd"><a href="#!">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
+                <div class="text-center more col-md-12  grid-item wedd"><a href="#!">More
                     </a></div>
                 <div class="col-12  col-md-6 grid-item kids">
                     <img src="assets/images/kid01.jpg" alt="">
@@ -351,7 +352,7 @@
                     <a class="gallery_img" href="">
                         <iframe width="540" height="280" src="https://www.youtube.com/embed/yDrTKDmqm-c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="card-img"></iframe>
                 </div>
-                <div class="text-center more col-md-12  grid-item cinema"><a href="#!">M<img src="assets/images/focus-more.svg" alt="" style="box-shadow: none; width: 30px;">re
+                <div class="text-center more col-md-12  grid-item cinema"><a href="#!">More
                     </a></div>
             </div>
         </div>
