--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                     <img src="assets/images/pre3.jpg" alt="">
                 </div>
                 <div class="text-center more col-md-12  grid-item prewed">
-                    <a href="/pre-wedding">More
-                    </a></div>
+                   <div> <a href="/pre-wedding">More
+                    </a></div></div>
                 <div class="col-12 col-md-6  grid-item engage ">
                     <img src="assets/images/eng01.jpg" alt="">
                 </div>
