--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="swiper-slide">
                         <div class="slide-inner" data-swiper-parallax="45%">
                             <div class="overlay"></div>
-                            <div class="slide-inner--image" style="background-image: url('assets/images/2.jpg')"></div>
+                            <div class="slide-inner--image" style="background-image: url('assets/images/c1.jpg')"></div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
                                 <h1>The Drive<br>of your life</h1>
@@ -111,7 +111,7 @@
                     <div class="swiper-slide">
                         <div class="slide-inner" data-swiper-parallax="45%">
                             <div class="overlay"></div>
-                            <div class="slide-inner--image" style="background-image: url('assets/images/1.jpg')">
+                            <div class="slide-inner--image" style="background-image: url('assets/images/c2.jpg')">
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
@@ -124,7 +124,7 @@
                     <div class="swiper-slide">
                         <div class="slide-inner" data-swiper-parallax="45%">
                             <div class="overlay"></div>
-                            <div class="slide-inner--image" style="background-image: url('assets/images/3.jpg')">
+                            <div class="slide-inner--image" style="background-image: url('assets/images/c3.jpg')">
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
@@ -137,7 +137,19 @@
                     <div class="swiper-slide">
                         <div class="slide-inner" data-swiper-parallax="45%">
                             <div class="overlay"></div>
-                            <div class="slide-inner--image" style="background-image: url('assets/images/4.jpg')">
+                            <div class="slide-inner--image" style="background-image: url('assets/images/c4.jpg')">
+                            </div>
+                            <div class="ashade-album-item__overlay"></div>
+                            <div class="slide-inner--info">
+                                <h1>What<br>the Fog?</h1>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">take a look</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-inner" data-swiper-parallax="45%">
+                            <div class="overlay"></div>
+                            <div class="slide-inner--image" style="background-image: url('assets/images/c5.jpg')">
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
