home page changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
     <title>Vicky Studio Photography</title>
     <!-- Metadata -->
@@ -52,7 +51,7 @@
                             </a>
                         </li>
                         <!-- Nav Link -->
-                     <!--    <li class="nav-item">
+                        <!--    <li class="nav-item">
                             <a href="albums.html" data-type="page-transition">
                                 <span class="ms-btn">albums</span>
                                 <span class="nav-item__label">View all our works</span>
@@ -190,16 +189,59 @@
             <div class="abt-bk">
                 <div class="abt-block">
                     <h2 class="text-left pb-3 pt-4">We <span>Focus</span> differently</h2>
-                    <p class="pt-2">Let Vicky Studio help you create images worth sharing!
-                        Whether it’s in our studios, in your home or at a special event, our skilled photographers will create just the right ambience to bring out your best side. Your only dilemma will be... which photo to share first!</p>
+                    <p class="pt-2">
+                        <!-- Let Vicky Studio help you create images worth sharing! Whether it’s in our studios, in your home or at a special event, our skilled photographers will create just the right ambience to bring out your best side. Your only dilemma will be... which photo to share first! -->
+                        We are professional photography agency providing photography services on all over India with our network of professional photographer. Whether you want to hire photographer for your pre-wedding shoot, wedding shoot or your kids photography we are just a call away. We also provide the cinematography services for our customers. We not only capture photos but we capture the real moment and store them, so that you can enjoy those memories forever.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <section id="whatwedo">
+        <div class="container">
+    <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6  whatwedo-box1">
+            <div class="numeric-block ">
+<!--               <div class="numeric-block-count">1</div>
+ -->             
+              <h3>We Capture Memories</h3>
+              <p >We Capture Your Special Day in Photographs so that you can enjoy them later.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 whatwedo-box2">
+            <div class="numeric-block ">
+<!--               <div class="numeric-block-count">2</div>
+ -->             
+              <h3>We Capture Feelings</h3>
+              <p >We Capture the feelings in our camera. We understand the feelings of our clients.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 whatwedo-box3">
+             <div class="numeric-block ">
+<!--               <div class="numeric-block-count">3</div>
+ -->             
+              <h3>We Capture the Moment</h3>
+              <p >We not only capture photos we capture the real time moment and store it in photos forever.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="work-proc2-a-cont wow fadeIn" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeIn;">
+                <a class="work-proc2-a" href="#">
+                    <div class="work-proc2-a-text filter-invert">
+                        Let's work<br><span class="border-bot">together</span>
+                    </div>
+                    <div class="work-proc2-bg-block bg-red2"></div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+    </section>
     <section class="section-partnership pb-4">
-        <div class="services pb-4">
+        <!--   <div class="services pb-4">
             <div class="container">
-                <h2 class="text-left pb-5 ">Filling your <span>Frames</span> by</h2>
                 <div class="row bottom">
                     <div class="col-md-3 serv-box mb-4">
                         <div class="item">
@@ -294,10 +336,80 @@
                         </div>
                     </div>
                 </div>
+            </div> 
+        </div>-->
+        <div class="services pb-4">
+            <div class="container">
+                <h2 class="text-left pb-5 ">Filling your <span>Frames</span> by</h2>
+                <p class="serv-sub-line text-center">We at Vicky Studio photography have an expert set of wedding photographers in Gondia who excel in clicking the best shots. You can call us your photography umbrella since we cover the entirety of your functions. You name it and we will have it. Under the list of services that we provide, some of them are-</p>
+                <div class="row">
+                    <div class="col-lg-6 p-0">
+                        <img src="images/home-wedding.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-6 serviceBox">
+                        <h3> Wedding Photography <span></span></h3>
+                        <p class=" ser-box-para"><strong>We can conquer the world with our wedding photographs!!</strong><br>The best shots are clicked when the one who is being clicked is unaware of it. Yes, the best shots are the natural ones, the candid ones. The one where you are as yourself. Your natural shot is your best pose. They are always alert in capturing you and your better half in the right natural pose.
+                        </p>
+                        <a href="#!" class="btn serv-box-btn">Read More <svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" height="15" width="15" viewBox="0 0 15 15" fill="#fff">
+                                <g id="_8" data-name="8">
+                                    <path d="M11.7,7,4.2.18a.65.65,0,0,0-.9,0,.64.64,0,0,0,0,.89L10.36,7.5,3.3,13.93a.64.64,0,0,0,0,.89.65.65,0,0,0,.9,0L11.7,8a.63.63,0,0,0,.18-.48A.64.64,0,0,0,11.7,7Z" />
+                                </g>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 serviceBox right">
+                        <h3 class="ser-left-h3">Cinematic Wedding Films <span></span></h3>
+                        <p class=" ser-box-para">From the best wedding photographers in gondia also comes the best cinematic wedding films. Here, we create behind the lens a perfect summary from the sets of your wedding. A beautiful depiction of the scenes from your wedding, worth cherishing forever, the feelings, the emotions, the people who matter; </p>
+                        <a href="#!" class="btn serv-box-btn">Read More <svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" height="15" width="15" viewBox="0 0 15 15" fill="#fff">
+                                <g id="_8" data-name="8">
+                                    <path d="M11.7,7,4.2.18a.65.65,0,0,0-.9,0,.64.64,0,0,0,0,.89L10.36,7.5,3.3,13.93a.64.64,0,0,0,0,.89.65.65,0,0,0,.9,0L11.7,8a.63.63,0,0,0,.18-.48A.64.64,0,0,0,11.7,7Z" />
+                                </g>
+                            </svg></a>
+                    </div>
+                    <div class="col-lg-6 p-0 order_first">
+                        <img src="images/home-cinematic.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 p-0">
+                        <img src="images/home-prewedding.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-6 serviceBox">
+                        <h3> Pre-wedding Photography <span></span></h3>
+                        <p class=" ser-box-para">Leading to that wonderful day are the ceremonies which bring the families closer, along with the bride and groom. Our pre wedding photography unit ensures that all the glorious ceremonies are captured in photographic memories. We make sure that the bride and groom along with all the family members are clicked in their best poses.
+                        </p>
+                        <a href="#!" class="btn serv-box-btn">Read More <svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" height="15" width="15" viewBox="0 0 15 15" fill="#fff">
+                                <g id="_8" data-name="8">
+                                    <path d="M11.7,7,4.2.18a.65.65,0,0,0-.9,0,.64.64,0,0,0,0,.89L10.36,7.5,3.3,13.93a.64.64,0,0,0,0,.89.65.65,0,0,0,.9,0L11.7,8a.63.63,0,0,0,.18-.48A.64.64,0,0,0,11.7,7Z" />
+                                </g>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 serviceBox right">
+                        <h3 class="ser-left-h3">Outdoor Photography <span></span></h3>
+                        <p class=" ser-box-para">Are you planning a destination wedding extravaganza? Do you love spending time outdoors with your partner? Do you dream of being a part of breathtaking pictures with the one you love? Pick the place of your dreams and we will work our magic; giving you the best outdoor photo shoot experience .</p>
+                        <a href="#!" class="btn serv-box-btn">Read More <svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" height="15" width="15" viewBox="0 0 15 15" fill="#fff">
+                                <g id="_8" data-name="8">
+                                    <path d="M11.7,7,4.2.18a.65.65,0,0,0-.9,0,.64.64,0,0,0,0,.89L10.36,7.5,3.3,13.93a.64.64,0,0,0,0,.89.65.65,0,0,0,.9,0L11.7,8a.63.63,0,0,0,.18-.48A.64.64,0,0,0,11.7,7Z" />
+                                </g>
+                            </svg></a>
+                    </div>
+                    <div class="col-lg-6 p-0 order_first">
+                        <img src="images/home-outdoor.jpg" class="img-fluid">
+                    </div>
+                </div>
             </div>
+            <!--container-->
         </div>
     </section>
-   <!--  <section id="insta-follow" class="pb-5">
+    <section class="fixed position-sticky zindexL" id="fixed-img">
+        <div class="container">
+            <h3>"Define your <span>special</span> moments and we will shoot into a wedding film with our <span>creative lens!</span>"</h3>
+        </div>
+    </section>
+    <!--  <section id="insta-follow" class="pb-5">
         <div class="container pb-5">
             <div class="row">
                 <div class="col-md-6 ">
@@ -309,17 +421,17 @@
             </div>
         </div>
     </section> -->
-    <section id="gallery" class="pb-5">
+    <section id="gallery" class="">
         <div class="container  pt-3 pb-5">
-           <!--  <h2 class="text-left pb-5 "> Start <span>  Stories </span>  of Images
+            <!--  <h2 class="text-left pb-5 "> Start <span>  Stories </span>  of Images
             </h2> -->
-            <h2 class="text-left pb-5 "> Great <span>  Moments </span>  Captured
-              </h2>
+            <h2 class="text-left pb-5 "> Great <span> Moments </span> Captured
+            </h2>
             <div class="btns filter-button-group pb-4" role="group" aria-label="filterImages">
                 <button type="button" class="btn btn-default is-checked active" data-filter=".prewed">Pre-Wedding</button>
                 <button type="button" class="btn btn-default" data-filter=".engage">Engagement</button>
                 <button type="button" class="btn btn-default" data-filter=".wedd">Wedding</button>
-                <button type="button" class="btn btn-default" data-filter=".kids">Kids</button>
+                <!-- <button type="button" class="btn btn-default" data-filter=".kids">Kids</button> -->
                 <button type="button" class="btn btn-default" data-filter=".cinema">Cinematography</button>
             </div>
             <div class="grid">
@@ -333,8 +445,9 @@
                     <img src="assets/images/pre3.jpg" alt="">
                 </div>
                 <div class="text-center more col-md-12  grid-item prewed">
-                   <div> <a href="/pre-wedding">More
-                    </a></div></div>
+                    <div> <a href="/pre-wedding">More
+                        </a></div>
+                </div>
                 <div class="col-12 col-md-6  grid-item engage ">
                     <img src="assets/images/eng01.jpg" alt="">
                 </div>
@@ -354,9 +467,9 @@
                 </div>
                 <div class="text-center more col-md-12  grid-item wedd"><a href="#!">More
                     </a></div>
-                <div class="col-12  col-md-6 grid-item kids">
+                <!--   <div class="col-12  col-md-6 grid-item kids">
                     <img src="assets/images/kid01.jpg" alt="">
-                </div>
+                </div> -->
                 <div class="col-12  col-md-6 grid-item cinema pb-3">
                     <iframe width="540" height="280" src="https://www.youtube.com/embed/p_grLhslv5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="card-img"></iframe>
                 </div>
@@ -369,7 +482,7 @@
             </div>
         </div>
     </section>
-    <section id="stats" class="pt-5 pb-5" style="color: #fff;">
+    <section id="stats" class=" pb-5" style="color: #fff;">
         <div class="container">
             <div class="row ">
                 <div id="col1" class="col-md-3 col-6 ">
@@ -433,8 +546,8 @@
                         <div class="col-md-12 mb-4  ">
                             <div class="row">
                                 <div class="col-md-2 col-2">
-<img src="assets/images/phone.svg" class="img-fluid contact-item" alt="">
-</div>
+                                    <img src="assets/images/phone.svg" class="img-fluid contact-item" alt="">
+                                </div>
                                 <div class="col-md-10 col-10">
                                     <a href="tel:9372821096" class=" pt-2  "> 9372821096, 9021136922</a>
                                 </div>
@@ -456,7 +569,7 @@
                 </div>
             </div>
             <p class="text-center"> © - 2020 Vicky Studio Photography <br> All Right Reserved.</p>
-            <p class="text-center">Made with <img src="assets/images/loveblackfill.svg" class="img-fluid footerlove"> by <img src="assets/images/Slogo2.png" class="img-fluid devlogo" ></p>
+            <p class="text-center">Made with <img src="assets/images/loveblackfill.svg" class="img-fluid footerlove"> by <img src="assets/images/Slogo2.png" class="img-fluid devlogo"></p>
     </footer>
     <!--     <script src="http://bfintal.github.io/Counter-Up/jquery.counterup.min.js"></script> 
  -->
@@ -474,9 +587,9 @@
     <!-- Gallery Js -->
     <script src="js/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="js/gallery.js"></script>
-
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
 </body>
 
 </html>
