--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="container">
                 <h2 class="text-left pb-5 ">Filling your <span>Frames</span> by</h2>
                 <p class="serv-sub-line text-center">We at Vicky Studio photography have an expert set of wedding photographers in Gondia who excel in clicking the best shots. You can call us your photography umbrella since we cover the entirety of your functions. You name it and we will have it. Under the list of services that we provide, some of them are-</p>
-                <div class="row">
+                <div class="row serv-row">
                     <div class="col-lg-6 p-0">
                         <img src="images/home-wedding.jpg" class="img-fluid">
                     </div>
@@ -357,7 +357,7 @@
                             </svg></a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row serv-row">
                     <div class="col-lg-6 serviceBox right">
                         <h3 class="ser-left-h3">Cinematic Wedding Films <span></span></h3>
                         <p class=" ser-box-para">From the best wedding photographers in gondia also comes the best cinematic wedding films. Here, we create behind the lens a perfect summary from the sets of your wedding. A beautiful depiction of the scenes from your wedding, worth cherishing forever, the feelings, the emotions, the people who matter; </p>
@@ -371,7 +371,7 @@
                         <img src="images/home-cinematic.jpg" class="img-fluid">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row serv-row">
                     <div class="col-lg-6 p-0">
                         <img src="images/home-prewedding.jpg" class="img-fluid">
                     </div>
@@ -386,7 +386,7 @@
                             </svg></a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row serv-row">
                     <div class="col-lg-6 serviceBox right">
                         <h3 class="ser-left-h3">Outdoor Photography <span></span></h3>
                         <p class=" ser-box-para">Are you planning a destination wedding extravaganza? Do you love spending time outdoors with your partner? Do you dream of being a part of breathtaking pictures with the one you love? Pick the place of your dreams and we will work our magic; giving you the best outdoor photo shoot experience .</p>
