--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -131,8 +131,8 @@
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-                        <a href="assets/pre-wedding/prewed-(2).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(2).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(4).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(4).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
@@ -147,8 +147,8 @@
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-8 aos-init aos-animate" data-aos="fade-up">
-                        <a href="assets/pre-wedding/prewed-(4).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(4).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(2).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(2).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
@@ -203,16 +203,16 @@
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3 aos-init" data-aos="fade-up">
-                        <a href="assets/pre-wedding/prewed-(11).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(11).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(12).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(12).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-6 aos-init" data-aos="fade-up" data-aos-delay="100">
-                        <a href="assets/pre-wedding/prewed-(12).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(12).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(11).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(11).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
@@ -259,16 +259,16 @@
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-                        <a href="assets/pre-wedding/prewed-(18).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(18).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(19).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(19).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
                         </a>
                     </div>
                     <div class="col-6 col-md-6 col-lg-8 aos-init" data-aos="fade-up" data-aos-delay="100">
-                        <a href="assets/pre-wedding/prewed-(19).jpg" class="d-block photo-item" data-fancybox="gallery">
-                            <img src="assets/pre-wedding/prewed-(19).jpg" alt="Image" class="img-fluid">
+                        <a href="assets/pre-wedding/prewed-(18).jpg" class="d-block photo-item" data-fancybox="gallery">
+                            <img src="assets/pre-wedding/prewed-(18).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
@@ -286,7 +286,7 @@
 
 
 
-                    <div class="col-6 col-md-6 col-lg-3 aos-init aos-animate" data-aos="fade-up">
+                    <div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
                         <a href="assets/pre-wedding/prewed-(21).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(21).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -294,7 +294,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-6 col-md-6 col-lg-8 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                         <a href="assets/pre-wedding/prewed-(22).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(22).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -302,7 +302,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-3 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                         <a href="assets/pre-wedding/prewed-(23).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(23).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -390,7 +390,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-8 aos-init" data-aos="fade-up">
+                    <div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
                         <a href="assets/pre-wedding/prewed-(34).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(34).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -406,7 +406,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-6 aos-init" data-aos="fade-up">
+                    <div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
                         <a href="assets/pre-wedding/prewed-(36).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(36).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -422,15 +422,15 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+                    <!-- <div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
                         <a href="assets/pre-wedding/prewed-(38).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(38).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
                                 <span class="icon icon-search"></span>
                             </div>
                         </a>
-                    </div>
-                    <div class="col-6 col-md-6 col-lg-8 aos-init" data-aos="fade-up" data-aos-delay="100">
+                    </div> -->
+                    <div class="col-6 col-md-6 col-lg-6 aos-init" data-aos="fade-up" data-aos-delay="100">
                         <a href="assets/pre-wedding/prewed-(39).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(39).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
@@ -438,7 +438,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-6 col-md-6 col-lg-8 aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-12 col-md-6 col-lg-12 aos-init" data-aos="fade-up" data-aos-delay="100">
                         <a href="assets/pre-wedding/prewed-(40).jpg" class="d-block photo-item" data-fancybox="gallery">
                             <img src="assets/pre-wedding/prewed-(40).jpg" alt="Image" class="img-fluid">
                             <div class="photo-text-more">
