--- a/engagement.html
+++ b/engagement.html
@@ -111,7 +111,7 @@
         <div class="container ">
             <!-- <h2>More <span>Creativity.</span> More <span>Photography.</span></h2> -->
             <!-- <h2>And so the <span>adventure</span> begins.</h2> -->
-            <h2>Let's be real, <span>every day</span> is an engagement <span>party</span> for us. 
+            <h2>Let's be<span> real</span>, every <span>day</span> is an <span>engagement party</span> for us. 
             </h2>
             <p class="pt-5 ">
                 Our engagement sessions are really a lifestyle type session focused on you and your relationship. 
