Testing syncing with git and vscode

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="slide-inner--image" style="background-image: url('assets/images/c1.jpg')"></div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
-                                <h1>The Drive<br>of your life</h1>
+                                <h1>The Drive<br> your life</h1>
                                 <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Wedding Shoots</a>
                             </div>
                         </div>
